# wxSwift

./: .gitignore  README.md  appveyor.yml
samples/wx/: SwiftForWindows.swift  test_wx1.swift  test_wx2.swift
samples/wxPython/: SwiftForWindows.py  wxtest.py
samples/wxc/: wxCHello.cpp  wxCTest.swift
samples/wxcore/: test_wxcore1.swift  wxCTest.swift
samples/wxcpp/: compile.sh  wxCppHello.cpp
vcproj/: .gitignore  wxC.sln
vcproj/wxC/: wxC.vcxproj
vcproj/wxCHello/: wxCHello.cpp  wxCHello.vcxproj  wxc_swift.h
vcproj/wxCppHello/: Resource.h  wxCppHello.cpp  wxCppHello.rc  wxCppHello.vcxproj
wx/: wx.sh  wx.swift  wx_const.swift  wxc_wrapper.swift  wxcore.swift  wxwidgets_patch.cpp
wxc/: .gitignore  LICENSE  Setup.hs  wxc.cabal
wxc/src/: CMakeLists.txt
wxc/src/cpp/: CMakeLists.txt  defs.cpp  eljaccelerator.cpp  eljartprov.cpp  eljaui.cpp  eljbrush.cpp  eljbusyinfo.cpp  eljbutton.cpp  eljcalendarctrl.cpp  eljcaret.cpp  eljcheckbox.cpp  eljchecklistbox.cpp  eljchoice.cpp  eljclipboard.cpp  eljcoldata.cpp  eljcolour.cpp  eljcolourdlg.cpp  eljcombobox.cpp  eljcommand.cpp  eljconfigbase.cpp  eljcontrol.cpp  eljctxhelp.cpp  eljcursor.cpp  eljdataformat.cpp  eljdatetime.cpp  eljdc.cpp  eljdcsvg.cpp  eljdialog.cpp  eljdialup.cpp  eljdirdlg.cpp  eljdnd.cpp  eljdrawing.cpp  eljevent.cpp  eljfiledialog.cpp  eljfilehist.cpp  eljfindrepldlg.cpp  eljfont.cpp  eljfontdata.cpp  eljfontdlg.cpp  eljframe.cpp  (+71 more)
wxc/src/include/: dragimage.h  ewxw_def.h  glcanvas.h  graphicscontext.h  hyperlinkctrl.h  managed.h  mediactrl.h  pickerctrl.h  previewframe.h  printout.h  sound.h  stc_gen.h  stream.h  textstream.h  wrapper.h  wxc.h  wxc_glue.h  wxc_types.h
wxc/src/include/wx/: version.h
