
add_library(wxC 
apppath.cpp
defs.cpp
dragimage.cpp
eljaccelerator.cpp
eljartprov.cpp
eljaui.cpp
eljbitmap.cpp
eljbrush.cpp
eljbusyinfo.cpp
eljbutton.cpp
eljcalendarctrl.cpp
eljcaret.cpp
eljcheckbox.cpp
eljchecklistbox.cpp
eljchoice.cpp
eljclipboard.cpp
eljcoldata.cpp
eljcolour.cpp
eljcolourdlg.cpp
eljcombobox.cpp
eljcommand.cpp
eljconfigbase.cpp
eljcontrol.cpp
eljctxhelp.cpp
eljcursor.cpp
eljdataformat.cpp
eljdatetime.cpp
eljdc.cpp
eljdcsvg.cpp
eljdialog.cpp
eljdialup.cpp
eljdirdlg.cpp
eljdnd.cpp
eljdrawing.cpp
eljevent.cpp
eljfiledialog.cpp
eljfilehist.cpp
eljfindrepldlg.cpp
eljfont.cpp
eljfontdata.cpp
eljfontdlg.cpp
eljframe.cpp
eljgauge.cpp
#eljgizmos.cpp
eljgrid.cpp
eljhelpcontroller.cpp
eljicnbndl.cpp
eljicon.cpp
eljimage.cpp
eljimagelist.cpp
eljipc.cpp
eljjoystick.cpp
eljlayoutconstraints.cpp
eljlistbox.cpp
eljlistctrl.cpp
eljlocale.cpp
eljlog.cpp
eljmask.cpp
eljmdi.cpp
eljmenu.cpp
eljmenubar.cpp
eljmessagedialog.cpp
eljmime.cpp
eljminiframe.cpp
eljnotebook.cpp
eljpalette.cpp
eljpanel.cpp
eljpen.cpp
#eljplot.cpp
eljprintdlg.cpp
eljprinting.cpp
eljprocess.cpp
eljradiobox.cpp
eljradiobutton.cpp
eljrc.cpp
eljregion.cpp
eljregioniter.cpp
eljsash.cpp
eljscrollbar.cpp
eljscrolledwindow.cpp
eljsingleinst.cpp
eljsizer.cpp
eljslider.cpp
eljspinctrl.cpp
eljsplash.cpp
eljsplitterwindow.cpp
eljstaticbox.cpp
eljstaticline.cpp
eljstatictext.cpp
eljstatusbar.cpp
eljsystemsettings.cpp
eljtextctrl.cpp
eljtglbtn.cpp
eljthread.cpp
eljtimer.cpp
eljtipwnd.cpp
eljtoolbar.cpp
eljvalidator.cpp
eljwindow.cpp
eljwizard.cpp
ewxw_main.cpp
extra.cpp
glcanvas.cpp
graphicscontext.cpp
hyperlinkctrl.cpp
image.cpp
managed.cpp
mediactrl.cpp
pickerctrl.cpp
previewframe.cpp
printout.cpp
sckaddr.cpp
socket.cpp
sound.cpp
stc.cpp
#stc_gen.cpp
std.cpp
stream.cpp
taskbaricon.cpp
textstream.cpp
treectrl.cpp
wrapper.cpp
)

